* Fixed a bug in Halloween which would cause your party to duplicate
* Fixed a whole lot of bugged italics in Krawitz Q
* Fixed a bug where Terry would be named Thief [1] upon recruiting
* Belly size description, according to pregnancy
* Added proper pregnancies (sorta). There's a birth scene, written by The Observer, and a nursery in the camp you can visit (though there's not much to do there)
* Removed Kyna from the game (no longer available even in debug)

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4l
------------
* Added Halloween content. You can access it either by playing during the time period 14 oct-14 nov, or by enabling debug
 - Go to the Nomad camp between 8-22 and you should get a one-time scene to start things off
 - After the one-time, the option "Pumpkin Pie" should be available to you between 17-22. The option is only available during the season or in debug
 - Each "playthrough" resets the event state, so you can test out multiple paths
* Fixed a bug regarding companions in Lei's task
* Layla has a new sex scene written by QB/LD. You need a cock/toy to trigger it
* Restructured the "Entity" class and split it up into multiple files. This shouldn't cause wierdness, but report if it does

Version 0.4k
------------
* Asche's magic box now counts toward purchases for tasks
* Added quest log entries for Vaughn's second and third task
* Added Lei's first task + reward (you need to have talked to him about bodyguarding and offered first to get the sexy reward)
* Added a sparring option to Lei. He's quite tough
* Did some body format restructuring, making the code more structured
* Fixed a bug which would remove your naga body on loading a save
* Sparring against Miranda actually gives you a slight xp boost now

Version 0.4j
------------
* Fixed a whole lot of bugs in Kiai
* Fixed a bunch of typos in Kiai, intro Imps. Thanks CalmKhaos!