@@ -578,6 +578,7 @@ world.loc.Plains.Nomads.Tent.events.push(new Link(
 		party.inventory.AddItem(Items.Testos);
 		party.inventory.AddItem(Items.Estros);
 		party.inventory.AddItem(Items.Androgyn);
+		party.inventory.AddItem(Items.Gestarium);
 		
 		party.inventory.AddItem(Items.Toys.SmallDildo);
 		party.inventory.AddItem(Items.Toys.MediumDildo);
