@@ -324,3 +324,191 @@ Items.Androgyn.PushEffect(TF.ItemEffects.DecCockLen, {odds: 0.8, ideal: 10, max:
 Items.Androgyn.PushEffect(TF.ItemEffects.DecCockThk, {odds: 0.8, ideal: 3, max: 2 });
 Items.Androgyn.PushEffect(TF.ItemEffects.DecBallSize, {odds: 0.8, ideal: 1, max: 4 });
 
+
+Items.Gestarium = new TFItem("preg0", "Gestarium");
+Items.Gestarium.price = 50;
+Items.Gestarium.lDesc = function() { return "a bottle of Gestarium"; }
+Items.Gestarium.Short = function() { return "A bottle of Gestarium"; }
+Items.Gestarium.Long  = function() { return "A small vial of thick, clear liquid. Drinking this while pregnant will cause the drinker’s pregnancy to advance somewhat."; }
+Items.Gestarium.recipe = [{it: Items.Fertilium}, {it: Items.Estros}, {it: Items.Bovia}];
+// Effects
+Items.Gestarium.PushEffect(function(target) {
+	var parse = {
+		Name : target.NameDesc(),
+		name : target.nameDesc(),
+		Poss : target.Possessive(),
+		poss : target.possessive()
+	};
+	parse = target.ParserTags(parse);
+	parse = target.ParserPronouns(parse);
+	parse = Text.ParserPlural(parse, target.plural());
+	
+	Text.Add("Unstoppering the vial, [name] drink[notS] the viscous liquid in one gulp. It tastes faintly of raw egg yolk with a texture to match, but goes down smoothly without a hitch.", parse);
+	Text.NL();
+	var isPreg = target.pregHandler.PregnantWombs();
+	var wombs = _.filter(isPreg, function(w) {
+		return w.progress < 1;
+	});
+	if(isPreg.length > 0) {
+		if(wombs.length > 0) {
+			Text.Add("Nothing happens for a moment, and then [poss] hands fly to [hisher] [belly] as a comforting warmth takes root in its lower depths, slowly spreading outwards to fill [hisher] womb.", parse);
+			Text.NL();
+			
+			Items.Gestarium.BellyGrowth(target, wombs, parse);
+		}
+		else {
+			parse["_is"] = target.plural() ? "'re" : " is";
+			Text.Add("While a faint gurgle sounds from within [poss] [belly], the skin visibly trembling, [hisher] pregnancy doesn’t grow any further. Seems like [name][_is] fit to pop any moment - best to get somewhere safe for the birth, lest you have to do the deed at an inconvenient time…", parse);
+		}
+	}
+	else {
+		Text.Add("Moments tick by, but nothing happens. Maybe drinking this while not pregnant wasn’t the best of ideas… ", parse);
+	}
+	Text.NL();
+});
+
+Items.Gestarium.BellyGrowth = function(target, wombs, parse) {
+	var size = target.pregHandler.BellySize();
+	
+	if(size < 0.1)
+		Text.Add("Gradually, [name] become[notS] aware of a faint pressure deep within [hisher] lower belly, palpable waves of contentment radiating from within even as the skin quavers and pulses to reflect the changes taking place within.", parse);
+	else if(size < 0.3)
+		Text.Add("Slowly, the warmth turns to pressure, and [name] look[notS] down to find the gentle swell of [hisher] baby bump pushing outward. Almost unnoticeable before, it’s becoming less and less so with each passing moment as the life growing inside begins to push against [poss] womb in earnest.", parse);
+	else if(size < 0.5)
+		Text.Add("[Name] let[notS] out a gentle, quivering sigh as the warmth begins to push outward and clutch[notEs] [hisher] belly as butterflies erupt in the pit of [hisher] stomach. Pulsating with steady growth, [poss] baby bump begins to spread [hisher] hands apart as the potion’s effects take hold and cause the offspring within to mature rapidly. It’s not that big yet, but how large will it be when this is over?", parse);
+	else if(size < 0.8)
+		Text.Add("A soft moan escapes [poss] mouth as [hisher] tummy, already obviously pregnant, begins to fill out even more thanks to the potion’s effects.", parse);
+	else if(size < 1.2)
+		Text.Add("[Name] pant[notS] and gasp[notS] as the feeling of being so full of life floods [hisher] senses; shamelessly, [heshe] rub[notS] [hisher] hands of the burgeoning swell of [hisher] [belly] as it fills out beautifully. Already heavily pregnant and being filled with even more life by the moment, one can only guess at where the growth will stop…", parse);
+	else if(size < 1.6)
+		Text.Add("Slowly, almost reluctantly, the potion’s effects take hold, and [name] moan[notS] unabashedly at the wondrous sensations coursing through [hisher] body, centered about [hisher] womb. Already stretched taut, the skin about [hisher] pregnant belly grows thinner and thinner as the life within grows bigger and bigger, heavier and heavier…", parse);
+	else if(size < 2.0)
+		Text.Add("An ominous rumble resounds from deep within [poss] womb, the usually taut skin of [hisher] womb quivering like jelly as energy gathers in preparation for what’s to come. It doesn’t take long, either - before you know it, [poss] pregnancy is swelling forth before your very eyes, a rapid, pulsating growth. Pushing out and then shrinking in a little, pushing out and then shrinking in a little, [poss] oversized pregnancy already looks overdue with twins, and it’s still getting bigger…", parse);
+	else if(size < 3.0)
+		Text.Add("Clutching [hisher] monstrous pregnancy, [name] huff[notS] and puff[notS], openly panting as the potion acts on the new life developing within [himher]. Staggering a little as [hisher] center of balance begins to shift once more, [name] run[notS] a hand over the taut [skin] that covers the swell of [hisher] pregnancy, delighting in the growth that’s taking place.", parse);
+	else
+		Text.Add("It seems impossible that [name] could get any larger, yet that’s exactly what happens. Lost in the sheer bliss of warmth and growth, [name] [isAre] certainly in a motherly way as the potion takes hold on [hisher] burgeoning womb. Tightly stretched skin creaks as [poss] growth accelerates, and you can’t help but wonder if [name] [isAre] about to burst…", parse);
+	Text.Add(" ");
+	
+	var womb = _.sample(wombs);
+	var oldProgress = womb.progress;
+
+	// growth
+	womb.progress     += 0.2;
+	var hours = 0.2 * womb.hoursToBirth / (1-oldProgress);
+	womb.hoursToBirth -= hours;
+	
+	var newSize = target.pregHandler.BellySize();
+	
+	if(newSize < 0.3)
+		Text.Add("When the sensation passes, [poss] belly has grown ever so slightly outward, the barest of bumps to mark [poss] pregnancy. Even with the potion’s help, it’ll probably be a little while before the new life within is ready to emerge into the world.", parse);
+	else if(newSize < 0.5)
+		Text.Add("With the growth over, [poss] pregnant bump has settled into a small protrusion - now plainly visible, but still concealable if [heshe] [wasWere] to wear loose-fitting clothes. There’s still plenty of room in [poss] womb for [hisher] offspring to grow, if need be…", parse);
+	else if(newSize < 0.8)
+		Text.Add("A gurgle sounds from within [poss] [belly], marking the end of the potion-induced growth spurt. [Name] very obviously look[notS] pregnant now - [hisher] belly is impossible to hide, a protruding bump that sticks out in front of [himher]. There’s some weight to it, but it doesn’t look <i>heavy</i> yet - although one wonders if that’s going to change as time passes.", parse);
+	else if(newSize < 1.2)
+		Text.Add("After the growth spurt’s passed, [name] [isAre] left holding a very huggable pregnant belly: full, rounded and looking as large as a full-term pregnancy - perhaps a little more. With all the added weight, [name] [hasHave] shifted [hisher] stance a little to deal with [hisher] lower center of gravity.", parse);
+	else if(newSize < 1.6)
+		Text.Add("By the time [poss] womb has calmed once more, [name] [isAre] massive - perhaps the size of a mother carrying full-term twins, give or take a month or so.Tapering off at its peak, [poss] belly juts out before [himher], round and full.", parse);
+	else if(newSize < 2.0) {
+		Text.Add("The extent to which [poss] belly swells is a little worrisome - well, more than a little worrisome. [HeShe] [isAre] already so large, [hisher] hands barely able to fully encircle the massive maternal mound that juts from [hisher] midesction - just how much longer is this pregnancy going to take, and more importantly, how much bigger [isAre] [name] going to grow?", parse);
+		Text.NL();
+		Text.Add("You can only suppose that [poss] body knows what’s it’s doing and hasn’t bitten off more than it can chew, but even so…", parse);
+	}
+	else if(newSize < 3.0) {
+		Text.Add("With how heavy [name] already [isAre], all the growth that’s just taken place has made [himher] truly rounded, [hisher] [belly] a massive, swollen dome of impending life. [Poss] skin creaks dangerously as the last spurts of growth take place, but the potion has truly done its job well, allowing [name] to stretch easily and clearly to deal with the rapid maturation of [hisher] young.", parse);
+		Text.NL();
+		Text.Add("For [poss] own sake, though, hopefully the birthing moment isn’t too far off…", parse);
+	}
+	else
+		Text.Add("Utterly and massively pregnant, you can only wonder how [name] manage[notS] to remain standing as the potion’s effects finally run their course. Ripe and full to the point of bursting, [heshe] can’t even reach around the new contours of [hisher] pregnancy. It can’t be long now, can it? Can it?", parse);
+	
+	//PC only, since these are more internal feelings than anything else. Play these if the player progresses from one stage to another. I believe it’s impossible for the PC to jump any more than 1 stage from a potion, so things should be fine.
+	//Could a separate one be made for followers?
+	if(target == player) {
+		var newProgress = womb.progress;
+		
+		if(oldProgress < PregnancyLevel.Level2 && newProgress >= PregnancyHandler.Level2) {
+			Text.NL();
+			Text.Add("The growth is accompanied by a pleasant surprise: the vague queasiness that’d been plaguing you quickly vanishes, to be replaced by a warm glow of contentment. It’s faint, but you have the feeling it’ll be growing…", parse);
+		}
+		else if(oldProgress < PregnancyLevel.Level3 && newProgress >= PregnancyHandler.Level3) {
+			Text.NL();
+			if(target.FirstBreastRow().Size() >= 2) {
+				Text.Add("As your womb has grown, so have your breasts - and the sensation of pressure within them, your boobflesh having perked up. With a faint dribble of warmth, you look down to discover a small white bead welling up on each of your nipples before falling away.", parse);
+				Text.NL();
+				Text.Add("That’s not all, though. ", parse);
+			}
+			if(womb.IsEgg()) {
+				parse = Text.ParserPlural(parse, womb.litterSize > 1);
+				Text.Add("As your belly has grown outwards, so [hasHave] the egg[s] within your womb; you feel a faint tickle of hard shell roll about in your lower belly as they shift into their new positions. While you can’t really feel [itThem] most of the time, it’s nevertheless reassuring to know that [itsTheyre] getting closer to the moment of laying…", parse);
+			}
+			else
+				Text.Add("Accompanying your potion-induced growth spurt is a faint flutter of movement from within your lower belly; you wonder at first if it’s just your imagination, but another faint stirring quashes that doubt. Seems like the life growing within you has decided to make itself known in no uncertain terms.", parse);
+		}
+		else if(oldProgress < PregnancyLevel.Level4 && newProgress >= PregnancyHandler.Level4) {
+			Text.NL();
+			Text.Add("Hugging your now-bigger belly, you’re rewarded with ", parse);
+			if(womb.IsEgg())
+				Text.Add("a jab from within as your newly-enlarged eggs jostle for space within your settling womb. Things are getting pretty crowded in there, by the feel of things - you wait a little while for your womb to calm and adjust to its new load, then get ready to be on your way.", parse);
+			else
+				Text.Add("a powerful kick from within your [belly], aimed squarely at your hands. Seems like the life you’re bearing is getting quite active now, birth can’t be that far away. Well, hopefully - judging by that last kick and the squirming that’s going on inside you, you’re going to end up perpetually winded if this keeps up all the time.", parse);
+		}
+		else if(oldProgress < PregnancyLevel.Level5 && newProgress >= PregnancyHandler.Level5) {
+			Text.NL();
+			Text.Add("With the final pulses of growth, you feel a weight slip downwards from your [belly], nestling snugly against your pelvis and weighing heavily against your cervix. Uh-oh - it seems like you’re really, <i>really</i> close to popping now… best to get yourself to a safe spot to do the deed, lest your body decides to do it anyway at the most inconvenient time…", parse);
+		}
+	}
+	
+	if(Math.random() < 0.5) {
+		var breasts = target.FirstBreastRow();
+		var hipSize = target.body.HipSize();
+		var buttSize = target.Butt().Size();
+		var lact = target.lactHandler.lactationRate.Get();
+		
+		var scenes = new EncounterTable();
+		scenes.AddEnc(function() {
+			Text.NL();
+			Text.Add("[Poss] baby bump isn’t the only thing that’s growing, changing. With the sudden surge of hormones and fertile energy coursing through [name], [poss] [breasts] begin to tingle and turn tender.", parse);
+			
+			var growth = breasts.Size() < 12.5;
+			
+			if(growth) {
+				Text.Add(" Without further warning, they suddenly balloon outwards, maturing in a potion-induced growth spurt!");
+				Text.NL();
+				
+				breasts.size.IncreaseStat(12.5, 2.5);
+				
+				parse["cups"] = breasts.ShortCup();
+				Text.Add("When the sudden breast expansion fades, [name] [isAre] sporting a pair of [cups], [hisher] mammaries now more capable of nourishing the brood growing within [himher].", parse);
+			}
+			
+			if(lact < 3 && Math.random() < 0.5) { //#if Lactation rate increase occurs
+				Text.NL();
+				if(growth)
+					Text.Add("The changes aren’t done, though. ");
+				Text.Add("Gentle heat gathers just behind [poss] nipples, sending tendrils of warmth into the breasts beneath. Boobflesh trembles and nipples stiffen as milk ducts mature and multiply within [poss] milk-makers, increasing the rate at which [heshe] can produce baby food.", parse);
+				
+				target.lactHandler.lactationRate.IncreaseStat(3, 0.5);
+			}
+		}, 1.0, function() { return (lact < 3) || (breasts.Size() < 12.5); });
+		scenes.AddEnc(function() {
+			Text.NL();
+			Text.Add("As [poss] baby bump finishes its growth, though, another change is taking place. With a faint creaking and shifting, [name] find[notS] [hisher] stance widening as [hisher] hips widen and butt plumps up, the comforting warmth moving downwards from [hisher] lower belly and working its magic there.", parse);
+			Text.NL();
+			Text.Add("Seems like [poss] body is thinking ahead - this will definitely help with the eventual birth, although in the meantime, [name] also look[notS] very much more motherly and fertile…", parse);
+			
+			target.body.torso.hipSize.IncreaseStat(HipSize.VeryWide, 1);
+			target.Butt().buttSize.IncreaseStat(15, 1);
+		}, 1.0, function() { return (hipSize < HipSize.VeryWide) || (buttSize < 15); });
+		scenes.AddEnc(function() {
+			Text.NL();
+			Text.Add("Last but not least, [poss] breasts, already firm, turn practically turgid and sensitive - the reason for that soon becomes clear as a bead of rich cream wells up from each nipple before falling away. Seems like the potion was nice enough to fill up [poss] baby-feeders to the brim, ready for a nice milking… or whatever else [heshe] may have in mind.", parse);
+			
+			target.lactHandler.FillMilk(1);
+		}, 1.0, function() { return true; });
+		
+		scenes.Get();
+	}
+}
+
